--- a/home.html
+++ b/home.html
@@ -8,5 +8,8 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 
+<h1>Hello world!</h1>
+<p>This is the first file in my new Git Repo.</p>
+
 </body>
 </html>
